Updated some libraries.